--- a/src/app/collections/views/details.component.scss
+++ b/src/app/collections/views/details.component.scss
@@ -4,8 +4,8 @@
   height: 100%;
 
   main {
-    flex-grow: 1;
     display: flex;
+    height: calc(100% - 223px);
 
     .content {
       flex-grow: 1;
